--- a/src/main.css
+++ b/src/main.css
@@ -13,6 +13,18 @@ svg {
 
 }
 
+
+@font-face {
+    font-family: audiowide;
+    src: url(../lib/fonts/audiowide/Audiowide-Regular.ttf);
+}
+
+@font-face {
+    font-family: squada-one;
+    src: url(../lib/fonts/squada-one/SquadaOne-Regular.ttf);
+}
+
+
 rect, circle{
     fill:blue;
     /*stroke:pink;*/
@@ -109,10 +121,228 @@ path{
 
 
 }
+
+
+
+
+
+
 #preview {
     background-color: rgb(233, 247, 254);
     /*margin: -769px 20px 581px 405px;*/
     margin: 1px -12px -204px 29px;
     z-index: 10;
 
+}
+
+
+
+
+
+#play{
+    background-color: rgba(93, 142, 236, 0);
+    border: none;
+    z-index: 10;
+    fill-rule:evenodd;
+
+    width: 135px;
+    height: 65px;
+
+    position: absolute;
+    bottom: 240px;
+    right: 298px;
+}
+.str0play {
+    stroke: #7889a7;
+    stroke-width:2.3622;
+}
+.fil0play {fill:#7889a7}
+.fil1play {fill:#7889a7}
+#play rect{fill-opacity: 1; fill: #7889a7;}
+
+
+
+#play:hover .fil0play{fill: #5c8391;}
+#play:hover .fil1play{fill: #5c8391;}
+#play:hover .str0play{stroke: #5c8391;}
+
+#pauseScreen{
+    fill: #becfe9;
+    fill-opacity: 0.7;
+}
+
+
+
+#paused{
+    width: 202px;
+    height: 82px;
+    background-color: rgba(93, 142, 236, 0);
+    border: none;
+    z-index: 10;
+
+
+    fill-rule:evenodd;
+    display: none;
+
+    position: absolute;
+    bottom: 309px;
+    right: 437px;
+}
+
+.str1Paused {stroke:#5c8391;stroke-width:0.700394}
+.str0Paused {stroke:#5c8391;stroke-width:1.00039}
+.fil0Paused {fill:#5c8391}
+
+.str0GameOver {stroke:#7889a7;stroke-width:0.700395}
+.fil0GameOver {fill:#7889a7}
+.fil1GameOver {fill:#7889a7}
+
+#gameOver {
+
+    display: none;
+    width: 310px;
+    height: 73px;
+    z-index: 10;
+
+    background-color: rgba(93, 142, 236, 0);
+    border: none;
+    fill-rule:evenodd;
+
+    position: absolute;
+    bottom: 327px;
+    right: 381px;
+
+
+}
+
+
+.str0OkButton {stroke:#7889a7;stroke-width:0.700397}
+.fil0OkButton {fill:#7889a7}
+
+#OkButton {
+
+    display: none;
+    width: 105px;
+    height: 55px;
+    z-index: 10;
+
+    background-color: rgba(93, 142, 236, 0);
+    border: none;
+    fill-rule:evenodd;
+
+    position: absolute;
+    bottom: 194px;
+    right: 492px;
+}
+
+#OkButton:hover .fil0OkButton{fill: #5c8391;}
+#OkButton:hover .str0OkButton{stroke: #5c8391;}
+
+
+
+        .str0Score{stroke:#000000;stroke-width:1.99962}
+.fil0Score {fill:#ffffff}
+
+#score {
+    display: none;
+    background-color: rgba(93, 142, 236, 0);
+    border: none;
+    z-index: 12;
+
+
+    position: absolute;
+    bottom: 215px;
+    left: 401px;
+
+    width:119px;
+    height:53px;
+}
+
+
+
+#score .str0Score{
+    stroke: #5f8491;
+    stroke-opacity: 0.9;
+
+}
+
+
+.numbers{
+    /*display: none;*/
+    font-family:  squada-one, serif ;
+    font-size: 46px;
+    font-weight: 100;
+    color: #5f8491;
+
+
+}
+
+
+.str0Level {stroke:#2B2A29;stroke-width:1.99963}
+.fil0Level {fill: #ffffff}
+#level{
+    display: none;
+    background-color: rgba(93, 142, 236, 0);
+    border: none;
+    z-index: 12;
+
+
+    width: 109px;
+    height: 53px;
+    position: absolute;
+    bottom: 403px;
+    left: 391px;
+
+}
+
+#level .str0Level{
+    stroke: #5f8491;
+    stroke-opacity: 0.9;
+
+}
+
+.str0Lines {stroke:#2B2A29;stroke-width:1.99963}
+.fil0Lines {fill:#ffffff}
+#Lines{
+    display: none;
+    background-color: rgba(93, 142, 236, 0);
+    border: none;
+    z-index: 12;
+
+
+    width: 98px;
+    height: 56px;
+    position: absolute;
+    bottom: 307px;
+    left: 399px;
+}
+
+
+#Lines .str0Lines{
+    stroke: #5f8491;
+    stroke-opacity: 0.9;
+
+}
+
+
+#numberOfLevel{
+    display: none;
+    position: absolute;
+    bottom: 358px;
+    right: 24px;
+}
+
+#numberOfScore{
+    display: none;
+    position: absolute;
+    bottom: 171px;
+    right: 24px;
+}
+
+
+#numberOfLines{
+    display: none;
+    position: absolute;
+    bottom: 266px;
+    right: 24px;
 }
